<resources>
    <string name="app_name">SFC South Shields</string>
    <string name="basket_activity_set_prices_single_item">%1$d item</string>
    <string name="basket_activity_set_prices_single_items">%1$d items</string>
    <string name="basketmultiitemsrecyclerviewadapter_multi_item">%1$s %2$s</string>
    <string name="categories_activity_delivery_cost">Delivery: £%1$s</string>
    <string name="categories_activity_minimum_order">Minimum: £%1$s</string>
    <string name="categoryrecyclerviewadapter_deals">DEALS</string>
    <string name="generic_basket_button_title">Basket</string>
    <string name="generic_process_order">PROCESSING ORDER</string>
    <string name="generic_place_order">Place Order</string>
    <string name="itemsrecyclerviewadapter_from_price">From £%1$s</string>
    <string name="multirecyclerviewadapter_filling_name">%1$s %2$s</string>
    <string name="generic_submit_payment">SUBMIT PAYMENT</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="allergy_title">Allergy or dietary requirement?</string>
    <string name="delivery">Delivery</string>
    <string name="collection">Collection</string>
    <string name="min_order_not_reached">Minimum order for delivery not reached</string>
    <string name="average_delivery_time">Average Delivery Time: %1$d minutes</string>
    <string name="average_collection_time">Average Collection Time: %1$d minutes</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="find_us">Find Us</string>
    <string name="billing_info">Billing Address</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Address</string>
    <string name="customer_postcode">Postal Code</string>
    <string name="customer_city">City</string>
    <string name="allergen_advice">If you have an allergy or have any dietary requirements, it is strongly advised you contact the restaurant directly and do not use this application. \n AppsUKnow is not responsible for the data published on the application and can not verify that all allergen information is visible</string>
    <string name="privacy_policy_body">Privacy Policy
\n \n
Effective date: January 04, 2019
\n \n
        AppsUKnow Ltd ("us", "we", or "our") operates (with the exclusion of the menu content) this mobile application. AppsUKnow Ltd is a software development company registered in England. Company number: 11128487. Registered office address: 13 Walworth Avenue, South Shields, England, NE34 7EP. Web address: https://appsuknow.com.
\n \n
This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.
\n \n
At any time, you have the right to be forgotten by AppsUKnow Ltd, and this page informs you on the process involved to achieve this.
\n \n
We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.
\n \n
Information Collection and Use
\n \n
We collect several different types of information for various purposes to provide and improve our Service to you.
\n \n
Types of Data Collected
\n \n
Personal Data
\n \n
While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may include, but is not limited to:
\n \n
-	Email address
-	First name and last name
-	Phone number
-	Address, State, Province, ZIP/Postal code, City
-	Cookies and Usage Data
\n \n
Usage Data
\n \n
When you access the Service by or through a mobile device, we may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile device unique ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browser you use, unique device identifiers and other diagnostic data ("Usage Data").
\n \n
Use of Data
\n \n
AppsUKnow Ltd uses the collected data for various purposes:
\n \n
-	To provide and maintain the Service
-	To notify you about changes to our Service
-	To allow you to participate in interactive features of our Service when you choose to do so
-	To provide customer care and support
-	To provide analysis or valuable information so that we can improve the Service
-	To monitor the usage of the Service
-	To detect, prevent and address technical issues
\n \n
Transfer of Data
\n \n
Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.
\n \n
If you are located outside United Kingdom and choose to provide information to us, please note that we transfer the data, including Personal Data, to United Kingdom and process it there.
\n \n
Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.
\n \n
AppsUKnow Ltd will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.
\n \n
Disclosure of Data
\n \n
Legal Requirements
\n \n
AppsUKnow Ltd may disclose your Personal Data in the good faith belief that such action is necessary to:
\n \n
-	To comply with a legal obligation
-	To protect and defend the rights or property of AppsUKnow Ltd
-	To prevent or investigate possible wrongdoing in connection with the Service
-	To protect the personal safety of users of the Service or the public
-	To protect against legal liability
\n \n
Service Providers
\n \n
We may employ third party companies and individuals to facilitate our Service ("Service Providers"), to provide the Service on our behalf, to perform Service-related services or to assist us in analysing how our Service is used.
\n \n
These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.
\n \n
Links to Other Sites
\n \n
Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party\'s site. We strongly advise you to review the Privacy Policy of every site you visit.
\n \n
We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.
\n \n
Children’s Privacy
\n \n
Our Service does not address anyone under the age of 18 ("Children").
\n \n
We do not knowingly collect personally identifiable information from anyone under the age of 18. If you are a parent or guardian and you are aware that your Children has provided us with Personal Data, please contact us. If we become aware that we have collected Personal Data from children without verification of parental consent, we take steps to remove that information from our servers.
\n \n
Changes to This Privacy Policy
\n \n
We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.
\n \n
You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.
\n \n
Right to Be Forgotten
\n \n
As a Data Subject (“you”), you hold the right to be forgotten from our databases. We will ensure that within 1 month of your request reaching us, any data that can identify you will be removed.
\n \n
Upon the request to be forgotten, final steps will be taken if a purchase through our system has taken place that involved electronic payment (card payment). This is to prevent fraudulent payments.
\n \n
We may, contact the bank/payment provider associated with the payment details to ensure it has been authorised before removing personal records such as name and address.
\n \n
Upon your request to be forgotten, we will replace any personal details with a GDPR (General Data Protection Regulation) record.
\n \n
If you wish to be forgotten by AppsUKnow Ltd, please follow the ‘Contact Us’ section below, and provide us with as much information regarding your order history as possible.
\n \n
Contact Us
\n \n
If you have any questions about this Privacy Policy, please contact us:
\n \n
By email: support@appsuknow.com
</string>
</resources>