<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".StripeActivity">

    <include layout="@layout/toolbar_custom_basket" />

    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_custom_basket"
            android:layout_margin="8dp">

            <com.stripe.android.view.CardInputWidget
                android:id="@+id/card_input_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20pt"
                android:theme="@style/CardWidgetStyle"
                android:padding="5dp"
                />

            <TextView
                android:id="@+id/text_view_billing_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/billing_info"
                android:layout_below="@+id/card_input_widget"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/edit_text_stripe_customer_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/restaurant_info"
                android:textColor="@color/black"
                android:padding="8dp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:hint="@string/customer_name"
                android:layout_below="@+id/text_view_billing_address"/>

            <EditText
                android:id="@+id/edit_text_stripe_customer_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/restaurant_info"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:hint="@string/customer_address"
                android:layout_below="@+id/edit_text_stripe_customer_name"/>

            <EditText
                android:id="@+id/edit_text_stripe_customer_postcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/restaurant_info"
                android:textColor="@color/black"
                android:padding="8dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_marginTop="4dp"
                android:hint="@string/customer_postcode"
                android:layout_below="@+id/edit_text_stripe_customer_address"/>

            <EditText
                android:id="@+id/edit_text_stripe_customer_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/restaurant_info"
                android:textColor="@color/black"
                android:padding="8dp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:layout_marginTop="4dp"
                android:hint="@string/customer_city"
                android:layout_below="@+id/edit_text_stripe_customer_postcode"/>

            <Button
                android:layout_width="match_parent"
                android:text="@string/generic_submit_payment"
                android:id="@+id/submitButton"
                android:layout_below="@+id/edit_text_stripe_customer_city"
                android:onClick="submitCard"
                android:layout_height="44dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:background="@color/blue"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>